# goit-pythonweb-hw-10

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 228a500a00b1_add_confirm_and_avatar_to_model.py  439a5f7a7af6_add_user_and_token.py  65fb3b80f5a2_init.py  686c18c9a8c9_add_user_role_to_model.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py  constants.py  messages.py
src/core/: depend_service.py  email_token.py
src/database/: db.py
src/entity/: models.py
src/repositories/: base_repository.py  contacts_repository.py  refresh_token_repository.py  user_repository.py
src/repository/: contacts.py
src/schemas/: contacts_schema.py  token_schema.py  user_schema.py
src/services/: auth_services.py  contacts.py  contacts_services.py  user_services.py
